deployment/ignite-cluster/templates/istio/peer-auth.yaml
apiVersion: security.istio.io/v1beta1
kind: PeerAuthentication
metadata:
  name: "mtls-policy-gridgain"
  namespace: gridgain
spec:
  mtls:
    mode: STRICT
