deployment/ignite-cluster/templates/istio/destination-rule.yaml
apiVersion: networking.istio.io/v1beta1
kind: DestinationRule
metadata:
  name: ignite-dest-rule
  namespace: ignite
spec:
  host: "ignite.svc.cluster.local"
  trafficPolicy:
    tls:
      mode: ISTIO_MUTUAL
